--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "I Farhat Portfolio",
-  "name": "I Farhat's Personal Portfolio",
+  "short_name": "I Farhat - Personal Portfolio",
+  "name": "I Farhat - Personal Portfolio website",
   "icons": [
     {
-      "src": "icons/favicon.ico",
+      "src": "images/icons/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "icons/android-chrome-192x192",
+      "src": "images/icons/android-chrome-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "icons/android-chrome-512x512",
+      "src": "images/icons/android-chrome-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
