--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
+    "postcss-nesting": "^12.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
