update: app name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "I Farhat - Personal Portfolio",
-  "name": "I Farhat - Personal Portfolio website",
+  "short_name": "I Farhat",
+  "name": "I Farhat Portfolio Website",
   "icons": [
     {
       "src": "/favicon.ico",
