chore: update app name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "I Farhat",
-  "name": "I Farhat Portfolio",
+  "name": "I Farhat Portfolio Web App",
   "icons": [
     {
       "src": "/favicon.ico",
