chore: update app details

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "I Farhat",
-  "name": "I Farhat Portfolio Web App",
+  "short_name": "Farhat",
+  "name": "Farhat Portfolio",
   "icons": [
     {
       "src": "/favicon.ico",
