--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#fdfdff",
+  "theme_color": "#16181d",
   "background_color": "#16181d"
 }
